@@ -1,3 +1,11 @@
+2004-05-08  Ronald Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/alsa/gstalsa.c: (device_list),
+	(gst_alsa_class_probe_devices):
+	* ext/alsa/gstalsamixer.c: (gst_alsa_mixer_open):
+	  Fix alsa oddness in mixer after the combination of using mixer
+	  in source/sink elements and using hw:x,y instead of just hw:x.
+
 2004-05-09  Benjamin Otte  <otte@gnome.org>
 
 	* gst/wavparse/gstwavparse.c: (gst_wavparse_destroy_sourcepad),
